--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <kbd class="kbd-key">;</kbd>
                     <kbd class="kbd-key">:</kbd>
                     <kbd class="kbd-key">!</kbd>
-                    <kbd class="kbd-key"><i class="fas fa-keyboard"></i></kbd>
+                    <kbd class="kbd-key space"></kbd>
                 </div>
         </main>
     <footer>
